# wsock-trace

./: .gitattributes  .gitignore  .gitmodules  README  README.md  appveyor-script.bat  appveyor.yml  appveyor_host_content.txt  appveyor_hosts_content.txt  drop.txt  dropv6.txt  edrop.txt  ipv4-address-space.csv  ipv6-unicast-address-assignments.csv  wsock_trace
CI/: README.md  appveyor-hosts-contents.txt  appveyor-script.bat
IP2Location-C-Library/libIP2Location/: IP2Loc_DBInterface.c  IP2Location.c
Lua/5.3/: README.wsock-trace
LuaJIT/src/: Makefile  buildvm.exp  buildvm.lib  lib_init.c  lib_package.c  lj_debug.c  lj_debug.h  luajit.exp  luajit.lib  minilua.exp  minilua.lib  msvcbuild.bat
doc/: Makefile  README.md  main_page.dox  wsock-trace.Doxyfile  wsock_trace.Doxyfile  wsock_trace.css
src/: AFUnix-issue.c  IP2Location.c  IP2Location.h  IPv6-calc.vbs  Makefile.CygWin  Makefile.MingW  Makefile.Watcom  Makefile.Windows  Makefile.inc  Makefile.vc6  Wsock-trace.sln  Wsock-trace.vcxproj  _ipproto.h  adig-test.bat  asn.c  asn.h  backtrace.c  bfd.h  bfd_gcc.c  bfd_gcc.h  cl-lshift.txt  common.c  common.h  config.h  cpu.c  cpu.h  csv.c  csv.h  curl-tor-test.html  cyg-ver.c  data.c  dnsbl.c  dnsbl.h  dump.c  dump.err  dump.h  firewall.c  firewall.h  fw-test-1.bat  fw-test-2.bat  (+74 more)
src/Geo-IP/: Makefile.Windows  README.md  geoip-stub.c  test-MMDB.c  test-geoip.cpp
src/Geo-IP/DB-IP/: README.md  dbip-asn-lite-2020-10.csv.xz  dbip-asn-lite-2020-10.mmdb.xz  dbip-country-lite-2020-03.csv.xz  dbip-country-lite-2020-03.mmdb.xz
src/Geo-IP/GeoipMMDB/: README.md  maxminddb-compat-util.h  maxminddb.c  maxminddb.h  maxminddb_config.h
src/Geo-IP/IPFire/: Makefile.am  README.md  autogen.sh  configure.ac
src/Geo-IP/IPFire/data/: signing-key.pem
src/Geo-IP/IPFire/database/: compile-database.py  countries.txt
src/Geo-IP/IPFire/database/overrides/: override-a1.txt  override-a2.txt  override-a3.txt  override-other.txt
src/Geo-IP/IPFire/libloc/src/: Makefile.Windows  as.c  country.c  database.c  libloc.c  network.c  stringpool.c  test-as.c  test-country.c  test-network.c  test-signature.c  win_mmap.c  win_str.c  writer.c
src/Geo-IP/IPFire/libloc/src/fake-OpenSSL/openssl/: applink.c  bio.h  fake-it.h
src/Geo-IP/IPFire/libloc/src/loc/: compat.h  country.h  database.h  format.h  libloc.h  network.h  private.h  stringpool.h  writer.h
src/Geo-IP/IPFire/libloc/src/loc/windows/: syslog.h  unistd.h
src/Geo-IP/IPFire/libloc/src/loc/windows/sys/: mman.h  queue.h
src/Geo-IP/IPFire/libloc/src/py3_install/: _location.pyd  location-importer.py  location.py
src/Geo-IP/IPFire/libloc/src/py3_install/location/: __init__.py  importer.py
src/Geo-IP/IPFire/libloc/src/python/: as.c  as.h  country.c  country.h  database.c  database.py  export.py  i18n.py  location-importer.in  location.in  locationmodule.c  network.h
src/Geo-IP/IPFire/man/: libloc.txt  loc_database_count_as.txt  loc_database_get_as.txt  loc_database_get_country.txt  loc_database_lookup.txt  loc_database_new.txt  loc_get_log_priority.txt  loc_new.txt  loc_set_log_fn.txt  loc_set_log_priority.txt
src/Geo-IP/IPFire/src/: .gitignore  Makefile.Windows  address.c  as-list.c  as.c  country-list.c  country.c  database.c  libloc.c  network-list.c  network-tree.c  network.c  resolv.c  stringpool.c  test-address.c  test-as.c  test-country.c  test-database.c  test-libloc.c  test-network-list.c  test-network.c  test-signature.c  test-stringpool.c  win_mmap.c  win_str.c  writer.c
src/Geo-IP/IPFire/src/cron/: location-update.in
src/Geo-IP/IPFire/src/fake-OpenSSL/openssl/: applink.c
src/Geo-IP/IPFire/src/libloc/: address.h  as-list.h  as.h  compat.h  country-list.h  country.h  database.h  format.h  libloc.h  luajit-hacks.h  network-list.h  network-tree.h  network.h  private.h  resolv.h  stringpool.h  version.h  writer.h
src/Geo-IP/IPFire/src/libloc/windows/: unistd.h
src/Geo-IP/IPFire/src/libloc/windows/sys/: mman.h
src/Geo-IP/IPFire/src/loc/: as-list.h  as.h  compat.h  country-list.h  database.h  libloc.h  network-list.h  network.h  resolv.h  version.h
src/Geo-IP/IPFire/src/loc/windows/: unistd.h
src/Geo-IP/IPFire/src/loc/windows/sys/: mman.h
src/Geo-IP/IPFire/src/lua/: as.c  as.h  compat.h  country.c  country.h  database.c  database.h  location.c  location.h  network.c  network.h
src/Geo-IP/IPFire/src/python/: __init__.py.in  as.c  as.h  country.c  country.h  database.c  database.h  downloader.py  export.py  importer.py  location-importer.in  location.in  locationmodule.c  locationmodule.h  logger.py  network.c  network.h  writer.c  writer.h
src/Geo-IP/IPFire/src/python/location/: __init__.py  database.py  downloader.py  export.py  i18n.py  importer.py  logger.py
src/Geo-IP/IPFire/src/scripts/: location-importer.in  location.in
src/Geo-IP/IPFire/tests/data/: signing-key.pem
src/Geo-IP/IPFire/tests/lua/: main.lua  main.lua.in
src/Geo-IP/IPFire/tests/python/: country.py  networks-dedup.py  test-database.py  test-export.py
src/Geo-IP/IPFire/tools/: copy.py
src/LZMA/: CpuArch.c  lzma.txt
src/LuaJIT/: Makefile.Windows
src/LuaJIT/src/: Makefile  lib_package.c  lj_api.c  lj_debug.c  lj_debug.h  lj_win.c  lj_win.h  ljamalg.c  luaconf.h  msvcbuild.bat
src/LuaJIT/tests/: NOTE.md  dyadic-func.c  dyadic-func.py
src/LuaJIT/tests/bench/: life.lua
src/LuaJIT/tests/test/: test.lua
src/mhook/: disasm.c  disasm.h  mhook.c  mhook.h
src/windows-firewall-configuration-truly-block-everything/: Allow Windows Update.reg  Block all.reg  NOTE  Windows Firewall Configuratiom-1.doc  Windows Firewall Configuration-2.doc
src/windows-firewall-docs/: [MS-FASP].rss
